# mindfulAI

./: README.md  app.py  create_docs_simple.py  create_documentation.py  create_supabase_tables.py  gemini_client.py  index.html  login.html  main.js  main.py  openrouter_client.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: auth.js  chat.js
templates/: chat.html  index.html  login.html  register.html
